[gd_scene load_steps=19 format=2]

[ext_resource path="res://Sword.tscn" type="PackedScene" id=1]
[ext_resource path="res://Effects_script/Lives.tscn" type="PackedScene" id=2]
[ext_resource path="res://StageEndlessMode.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Stage UI/resume_button.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Stage UI/pause_button.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Stage UI/Unmute-01.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Stage UI/Mute-01.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Stage UI/Score.png" type="Texture" id=8]
[ext_resource path="res://Font/Pirate Kids.otf" type="DynamicFontData" id=9]
[ext_resource path="res://Sprites/Background.png" type="Texture" id=10]
[ext_resource path="res://Sounds/pirate/4xcombo.wav" type="AudioStream" id=11]
[ext_resource path="res://Sounds/pirate/3xcombo.wav" type="AudioStream" id=12]
[ext_resource path="res://Sounds/lostlife_sfx.wav" type="AudioStream" id=13]
[ext_resource path="res://Sounds/Throwing_woosh.wav" type="AudioStream" id=14]
[ext_resource path="res://Sounds/pirate/2xcombo.wav" type="AudioStream" id=15]
[ext_resource path="res://Sounds/pirate/1xcombo.wav" type="AudioStream" id=16]
[ext_resource path="res://Sounds/addlife_sfx.wav" type="AudioStream" id=17]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0.843137, 0.341176, 0.2, 1 )
font_data = ExtResource( 9 )

[node name="StageEndlessMode" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 256, 144 )
scale = Vector2( 1, 0.562503 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Sword" parent="CanvasLayer" instance=ExtResource( 1 )]

[node name="Lives" parent="CanvasLayer" instance=ExtResource( 2 )]
position = Vector2( 96, 24 )

[node name="Spawners" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="FarLeftSpawner" type="Position2D" parent="Spawners"]
position = Vector2( 32, 304 )
__meta__ = {
"_edit_lock_": true
}

[node name="LeftSpawner" type="Position2D" parent="Spawners"]
position = Vector2( 160, 304 )
__meta__ = {
"_edit_lock_": true
}

[node name="MiddleSpawner" type="Position2D" parent="Spawners"]
position = Vector2( 256, 304 )
__meta__ = {
"_edit_lock_": true
}

[node name="RightSpawner" type="Position2D" parent="Spawners"]
position = Vector2( 352, 304 )
__meta__ = {
"_edit_lock_": true
}

[node name="FarRightSpawner" type="Position2D" parent="Spawners"]
position = Vector2( 480, 304 )
__meta__ = {
"_edit_lock_": true
}

[node name="OrangeThrowSoundEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = 10.0

[node name="LaughComboSoundEffect1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )
volume_db = 15.0
pitch_scale = 0.9

[node name="LaughComboSoundEffect2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )
volume_db = 15.0
pitch_scale = 0.9

[node name="LaughComboSoundEffect3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
volume_db = 15.0
pitch_scale = 0.9

[node name="LaughComboSoundEffect4" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
volume_db = 15.0
pitch_scale = 0.9

[node name="LostLifeSoundEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -5.0

[node name="AddLifeSoundEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )

[node name="MetalClangSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )

[node name="ScoreCounter" type="Sprite" parent="."]
position = Vector2( 480, 32 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="ScoreCounterText" type="Label" parent="."]
margin_top = 10.8387
margin_right = 450.0
margin_bottom = 53.8387
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.447059, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.843137, 0.341176, 0.2, 1 )
text = "0x"
align = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PauseButton" type="TextureButton" parent="."]
margin_left = 9.75118
margin_top = 48.0
margin_right = 141.751
margin_bottom = 180.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="TextureButton" parent="."]
pause_mode = 2
visible = false
margin_left = 9.75118
margin_top = 48.0
margin_right = 141.751
margin_bottom = 180.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MuteButton" type="TextureButton" parent="."]
margin_left = 48.0
margin_top = 48.0
margin_right = 1230.0
margin_bottom = 207.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnmuteButton" type="TextureButton" parent="."]
visible = false
margin_left = 48.0
margin_top = 48.0
margin_right = 1230.0
margin_bottom = 207.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BombSpawnTimer" type="Timer" parent="."]
wait_time = 8.0
autostart = true
[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="MuteButton" to="." method="_on_MuteButton_pressed"]
[connection signal="pressed" from="UnmuteButton" to="." method="_on_UnmuteButton_pressed"]
[connection signal="timeout" from="BombSpawnTimer" to="." method="_on_BombSpawnTimer_timeout"]
